# ChangeLog for mail-client/alpine
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/alpine/ChangeLog,v 1.4 2009/05/22 14:59:38 armin76 Exp $

  22 May 2009; Raúl Porcel <armin76@gentoo.org> alpine-2.00.ebuild:
  Add ~ia64/~sparc wrt #267299

  15 May 2009; Markus Meier <maekke@gentoo.org> alpine-2.00.ebuild:
  add ~amd64, bug #267299

  03 May 2009; Tobias Klausmann <klausman@gentoo.org> alpine-2.00.ebuild:
  Keyworded on alpha, bug #267299

*alpine-2.00 (24 Apr 2009)

  24 Apr 2009; Torsten Veller <tove@gentoo.org> +files/2.00-lpam.patch,
  +files/CVE-2008-5514.patch, +metadata.xml, +alpine-2.00.ebuild:
  Initial commit. Thanks to Sascha Lucas et al. in bug #176904
