@@ -1,6 +1,11 @@
 # ChangeLog for mail-client/alpine
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/alpine/ChangeLog,v 1.4 2009/05/22 14:59:38 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/alpine/ChangeLog,v 1.5 2009/08/17 18:50:32 tove Exp $
+
+*alpine-2.00-r1 (17 Aug 2009)
+
+  17 Aug 2009; Torsten Veller <tove@gentoo.org> +alpine-2.00-r1.ebuild:
+  Bump chappa patchset to patchlevel 51
 
   22 May 2009; Raúl Porcel <armin76@gentoo.org> alpine-2.00.ebuild:
   Add ~ia64/~sparc wrt #267299
